<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="qq_notes_storage_hint">QQ is configured. Notes are stored in Drafts; ordinary drafts are excluded.</string>
    <string name="app_name" translatable="false">ImapNotes3</string>
    <string name="new_account">New Account</string>
    <string name="new_note">New Note</string>
    <string name="refresh">Refresh</string>
    <string name="about">About</string>
    <string name="search">Search</string>
    <string name="account_removed">Account has been removed</string>
    <string name="quotation_marks_not_allowed">Quotation marks are not allowed in account name</string>
    <string name="remove">Remove</string>
    <string name="save">Save</string>
    <string name="check_and_create_account">Check &amp; Create Account</string>
    <string name="logging_in">Logging into your account…</string>
    <string name="account_already_exists_or_is_null">This Android account/notebook for Imapnotes3 already exists or is invalid</string>
    <string name="account_added">Account has been added</string>
    <string name="add_account">Add Account/Notepad</string>
    <string name="account_name">Name for the account or notepad</string>
    <string name="account_name_description">Leave empty to use the User name</string>
    <string name="username">User name</string>
    <string name="your_login_name">Your login for mail server</string>
    <string name="password">Password</string>
    <string name="your_password">Your password for mail server</string>
    <string name="server">IMAP Server name</string>
    <string name="imap_notes_server">Host name for mail server</string>
    <string name="server_port_number_to_use">Server port number to use</string>
    <string name="port_number">Port Number</string>
    <string name="sync_interval">Sync Interval</string>
    <string name="notes_folder">Notes folder on server</string>
    <string name="notes_folder_description">Leave empty to use \'Notes\'</string>
    <string name="delete">Delete</string>
    <string name="color">Color</string>
    <string name="blue">Blue</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="yellow">Yellow</string>
    <string name="pink">Pink</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="gray">Gray</string>
    <string name="syncing">Synchronizing…</string>
    <string name="refreshing_notes_list">Refreshing notes list…</string>
    <string name="updating_notes_list">Updating notes list…</string>
    <string name="editAccount">Edit Account</string>
    <string name="Waiting_for_sync">Waiting for synchronizing finish</string>
    <string name="Invalid_Message">Invalid Message Data</string>
    <string name="sort_date">Sort by Date</string>
    <string name="sort_title">Sort by Title</string>
    <string name="sort">Sort</string>
    <string name="undo">UnDo</string>
    <string name="redo">ReDo</string>
    <string name="format">Format</string>
    <string name="heading">Heading</string>
    <string name="txt_color">Text Color</string>
    <string name="bg_color">Background Color</string>
    <string name="alignment">Alignment</string>
    <string name="insert">insert</string>
    <string name="note_last_change">Last Change</string>
    <string name="sync_wait_necessary">please wait until sync is complete.</string>
    <string name="save_wait_necessary">please wait until save is complete.</string>
    <string name="security">Security</string>
    <string name="note_title">Note Title</string>
    <string name="brown">Brown</string>
    <string name="none">None</string>
    <string name="delete_note">Delete note</string>
    <string name="are_you_sure_you_wish_to_delete_the_note">Are you sure you wish to delete the note?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sort_color">Sort by Color</string>
    <string name="license">License</string>
    <string name="internet">Internet</string>
    <string name="placeholder">Insert text here…</string>
    <string name="AccountList">Account List</string>
    <string name="Last_sync">"Last sync: "</string>
    <string name="share">Share</string>
    <string name="shared_note_from">Shared note from </string>
    <string name="account_modified">Account has been modified</string>
    <string name="intent_save_as_note">Save as note</string>
    <string name="share_file_error">Share file error:</string>
    <string name="send_debug_report">Create Error Report</string>
    <string name="insert_as_new_note">Insert shared data as new note</string>
    <string name="insert_in_note">Insert shared data</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="table">Table</string>
    <string name="section">Section</string>
    <string name="content">Content</string>
    <string name="select_link_audio">Select a link to an audio stream</string>
    <string name="select_link_video">Select a link to a video</string>
    <string name="select_link_youtube">Select a link to a youtube video</string>
    <string name="open_link">Open Link in external Browser</string>
    <string name="no_program_found">No suitable program found</string>
    <string name="made_changes">You have made some changes.</string>
    <string name="save_changes">Would you like to save before exiting?</string>
    <string name="off">Off</string>
    <string name="t15min">15 Minutes</string>
    <string name="t1h">1 Hour</string>
    <string name="t6h">6 Hours</string>
    <string name="t1d">1 Day</string>
    <string name="noneSecurity">none</string>
    <string name="SSL_TLS">SSL/TLS</string>
    <string name="SSL_TLS_allcerts">SSL/TLS (accept all certificates)</string>
    <string name="STARTTLS">STARTTLS</string>
    <string name="STARTTLS_allcerts">STARTTLS (accept all certificates)</string>
    <string name="selectTextColor">Select Text Color</string>
    <string name="selectBgColor">Select Background Color</string>
    <string name="enter_table_dimension">enter table dimension</string>
    <string name="count_table_row">Count Rows</string>
    <string name="count_table_col">Count Columns</string>
    <string name="insert_link">Insert Link</string>
    <string name="link_url">Link Url</string>
    <string name="link_text">Link Text</string>
    <string name="link_title">Link Title</string>
    <string name="insert_link_image">Insert linked image</string>
    <string name="link_image_url">Image URL</string>
    <string name="link_alt_text">Alternative text</string>
    <string name="link_image_width">Width (% or px)</string>
    <string name="link_image_height">Height (% or px)</string>
    <string name="image_size_relative">Image size is relative to page width</string>
    <string name="file_size_allowed">Only files smaller than %1$.1f MB allowed. (decrease resolution)</string>
    <string name="file_size_info">File size %1$.1f MB. (only %2$.1f MB allowed)</string>
    <string name="insert_hashtag">Insert HashTag</string>
    <string name="insert_hashtag_name">HashTag Name</string>
    <string name="insert_hashtag_syntax">Not a valid HashTag</string>
    <string name="filter_by_hash">Filter by HashTag</string>
    <string name="reset_filter">Reset</string>
    <string name="insert_image_as_inline">Embedding image (no link)</string>
    <string name="insert_image_shrink">decrease resolution by</string>
    <string name="insert_shared_image">Insert shared image</string>
    <string name="Invalid_Note">Invalid note</string>
    <string name="IMAP_operation_failed">IMAP operation failed</string>
    <string name="select_one_account">Select one account/notepad</string>
    <string name="all_accounts">All</string>
    <string name="help">Help</string>
    <string name="imap_help_text">If you get Invalid credentials error:\n
                                  Some providers like gmail or gmx require an app specific password to sign in to IMAP. Its needed for activating two factor authentication.\n
                                  You can create such a password with your provider.
    </string>
    <string name="search_any_keyword">Search any keyword..</string>
    <string name="make_archive">Create Backup</string>
    <string name="intent_import_note">Import Note(s)</string>
    <string name="importing">Importing…</string>
    <string name="appstore">App-Store</string>
    <string name="appstorelink">https://f-droid.org/en/packages/de.niendo.ImapNotes3/</string>
    <string name="appstorename">F-Droid</string>
    <string name="permission_required">permission required</string>
    <string name="permission_message">please grant permission to write backup to documents directory</string>
    <string name="create_archive">Create backup: </string>
    <string name="default_color">Default</string>
    <string name="restore_archive">Restore from Archive</string>
    <string name="account_name_restore">Select target account/notebook</string>
    <string name="select_all_notes_for_restore">all</string>
    <string name="restore_more_then_one_account_found">The archive contains more than one account/notebook</string>
    <string name="select_account_name_restore_import">Select an account/notebook for restore</string>
    <string name="select_notes_for_restore">Select one or more notes to restore from %s</string>
    <string name="failed">failed</string>
    <string name="archiving">archiving…</string>
    <string name="success">successfully</string>
    <string name="reading_archive_file">Reading archive file</string>
    <string name="imap_server_changed_new_password">Server name changed, please renter password!</string>
    <string name="settings">Settings</string>
    <string name="appearance">Appearance</string>
    <string name="EditorBgColorDefault">Default background color for notes</string>
    <string name="EditorBgColorDefault_sum">For dark and light mode a different value is saved.</string>
    <string name="EditorTxtColor">Text color for notes</string>
    <string name="EditorTxtColor_sum">For dark and light mode a different value is saved.</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="backup">Backup</string>
    <string name="CreateBackup_sum">Archive notes to a zip file.</string>
    <string name="RestoreBackup_sum">Restore one or more notes from a zip file.</string>
    <string name="no_notes_in_file">Archive contains no valid notes</string>
    <string name="copyImapFolderName">Copy notes in this folder before saving or deleting</string>
    <string name="extendedAccountSettings">Extended Settings</string>
    <string name="translation">Translation</string>
    <string name="german">German</string>
    <string name="contributors">Contributors</string>
    <string name="chinese">Chinese</string>
    <string name="italian">Italian</string>
    <string name="french">French</string>
    <string name="spanish">Spanish</string>
    <string name="portuguese">Portuguese</string>
    <string name="russian">Russian</string>
    <string name="czech">Czech</string>
    <string name="norwegian">Norwegian</string>
    <string name="catalan">Catalan</string>
    <string name="save_note_failed">saving the note failed for unknown reasons</string>
    <string name="Ukrainian">Ukrainian</string>
    <string name="OAUTH2">OAuth2/XOAuth2</string>
</resources>
