<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--Search menu item-->
    <item
        android:id="@+id/itemSearch"
        android:icon="@drawable/ic_action_search"
        android:title="Search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <!--make sure you add the collapseActionView in showsAsAction-->

    <!--menu item to jump to next keyword-->
    <item
        android:id="@+id/itemNext"
        android:icon="@drawable/arrow_drop_down"
        android:title="Next Item"
        android:visible="false"
        app:showAsAction="always" />

    <!--menu item to jump to previous keyword-->
    <item
        android:id="@+id/itemPrevious"
        android:icon="@drawable/arrow_drop_up"
        android:title="Previous Item"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/save"
        android:icon="@drawable/ic_action_save"
        android:title="@string/save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/attachments" android:title="@string/attachments" app:showAsAction="never" />

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/color"
        android:icon="@drawable/ic_action_color"
        android:title="@string/color"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/none"
                    android:checked="true"
                    android:title="@string/none" />
                <item
                    android:id="@+id/blue"
                    android:title="@string/blue" />
                <item
                    android:id="@+id/white"
                    android:title="@string/white" />
                <item
                    android:id="@+id/gray"
                    android:title="@string/gray" />
                <item
                    android:id="@+id/black"
                    android:title="@string/black" />
                <item
                    android:id="@+id/yellow"
                    android:title="@string/yellow" />
                <item
                    android:id="@+id/pink"
                    android:title="@string/pink" />
                <item
                    android:id="@+id/green"
                    android:title="@string/green" />
                <item
                    android:id="@+id/brown"
                    android:title="@string/brown" />
                <item
                    android:id="@+id/red"
                    android:title="@string/red" />
            </group>
        </menu>
    </item>

</menu>
