<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/newnote"
        android:icon="@drawable/ic_action_new"
        android:title="@string/new_note"
        app:showAsAction="never" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/filter_by_hash"
        android:checked="false"
        android:icon="@drawable/ic_action_filter_hash"
        android:title="@string/filter_by_hash"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/refresh"
        app:showAsAction="never" />

    <group
        android:checkableBehavior="single"
        android:icon="@drawable/ic_action_sort"
        android:title="@string/sort"
        android:visible="true"
        app:actionViewClass="android.widget.CheckBox">
        <item
            android:id="@+id/sort_date"
            android:checked="true"
            android:icon="@drawable/ic_action_sort_date"
            android:title="@string/sort_date"
            android:visible="true"
            app:showAsAction="collapseActionView" />

        <item
            android:id="@+id/sort_title"
            android:checked="false"
            android:icon="@drawable/ic_action_sort_title"
            android:title="@string/sort_title"
            android:visible="true"
            app:showAsAction="never" />

        <item
            android:id="@+id/sort_color"
            android:checked="false"
            android:icon="@drawable/ic_action_sort_color"
            android:title="@string/sort_color"
            android:visible="true"
            app:showAsAction="never" />
    </group>

    <item
        android:id="@+id/newaccount"
        android:icon="@drawable/ic_action_add_user"
        android:title="@string/new_account"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

</menu>
